--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,16 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2.5",
         "ext-json": "*",
         "ext-openssl": "*",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/support": "^5.6.0",
+        "illuminate/support": "^7.18.0",
         "wildbit/postmark-php": "^2.11"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8.4",
-        "phpunit/phpunit": "^7.5.20"
+        "orchestra/testbench": "^5.1.4",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
